# despliegue_chatbot

./: .dockerignore  .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  PROYECTO_COMPLETADO.md  QUICKSTART.md  README.md  pyproject.toml  run.sh  test_app.py
.claude/: settings.local.json
docs/: QUICKSTART.md  arquitectura.md  presentacion.md
notebooks/: 01_sources.ipynb  02_cleanup_EDA.ipynb  03_training_evaluation.ipynb
src/: 02_training.py  __init__.py  database.py  llm_service.py  main.py  main_backup.py  main_new.py  news_service.py  profile_service.py
static/: chat.html
